[tool.poetry]
name = "storytelegrambot"
version = "0.1.0"
description = ""
authors = ["Sorokin Vadym <s57111702@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pyTelegramBotAPI = "^4.5.1"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
